--- a/_sass/components/_components-in-page-nav.scss
+++ b/_sass/components/_components-in-page-nav.scss
@@ -31,7 +31,7 @@
       height: 0;
 
       a {
-        padding-left: em(24);
+        padding-left: em($spacing-large);
       }
     }
 
